--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "upili-app",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "private": true,
     "scripts": {
         "dev": "next dev",
@@ -9,17 +9,17 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@ai-sdk/google": "^0.0.55",
+        "@ai-sdk/google": "^1.0.0",
         "@radix-ui/react-slot": "^1.1.0",
-        "ai": "^3.4.33",
+        "ai": "^4.0.0",
         "autoprefixer": "^10.4.23",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "framer-motion": "^11.11.17",
         "lucide-react": "^0.460.0",
-        "next": "14.2.16",
-        "react": "^18",
-        "react-dom": "^18",
+        "next": "15.0.3",
+        "react": "19.0.0-rc.1",
+        "react-dom": "19.0.0-rc.1",
         "recharts": "^2.13.3",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7"
@@ -28,8 +28,8 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
-        "eslint": "^8",
-        "eslint-config-next": "14.2.16",
+        "eslint": "^9",
+        "eslint-config-next": "15.0.3",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
