--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "react-dom": "19.0.0-rc.1",
         "recharts": "^2.13.3",
         "tailwind-merge": "^2.5.4",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^4.2.1"
     },
     "devDependencies": {
         "@types/node": "^20",
